force-app/main/default/objects/SLABatchSettings__mdt/SLABatchSettings__mdt.object-meta.xml
<CustomObject>
    <description>Metadado para configuração de parâmetros do SLA.</description>
    <label>SLA Batch Settings</label>
    <pluralLabel>SLA Batch Settings</pluralLabel>
</CustomObject>