force-app/main/default/objects/SLABatchSettings__mdt/fields/BatchSize__c.field-meta.xml
<CustomField>
    <fullName>BatchSize__c</fullName>
    <description>Teto de casos processados por execução</description>
    <inlineHelpText>Qual o valor máximo do batch size?</inlineHelpText>
    <label>BatchSize</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>