force-app/main/default/objects/SLABatchSettings__mdt/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Parâmetro de ativação do Batch</description>
    <inlineHelpText>Batch ativo?</inlineHelpText>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>