force-app/main/default/objects/SLABatchSettings__mdt/fields/ManagerEmail__c.field-meta.xml
<CustomField>
    <fullName>ManagerEmail__c</fullName>
    <description>Para onde enviar o alerta quando SendEmails__c = true.</description>
    <inlineHelpText>Qual o e-mail de destino para o alerta?</inlineHelpText>
    <label>ManagerEmail</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>