force-app/main/default/objects/SLABatchSettings__mdt/fields/SendEmails__c.field-meta.xml
<CustomField>
    <fullName>SendEmails__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se true, envia 1 e-mail por execução quando houver casos vencidos.</description>
    <inlineHelpText>Envia um email por execução quando houver casos vencidos</inlineHelpText>
    <label>SendEmails</label>
    <type>Checkbox</type>
</CustomField>